--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.18",
+    "dotenv": "^16.0.2",
     "nodemon": "^2.0.20",
     "ts-node-dev": "^2.0.0"
   }
