--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev index.ts",
-    "build": "tsc",
+    "build": "tsc --build",
     "start": "nodemon"
   },
   "keywords": [],
